c1/develop_node
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/develop_node/src/proof.c:1229:14: error: expected expression
*( ( _OWORD *)v7 + 2) = *( _OWORD *)&v5->from; 
             ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/develop_node/src/proof.c:1229:6: error: use of undeclared identifier '_OWORD'
*( ( _OWORD *)v7 + 2) = *( _OWORD *)&v5->from; 
     ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/develop_node/src/proof.c:1229:36: error: expected expression
*( ( _OWORD *)v7 + 2) = *( _OWORD *)&v5->from; 
                                   ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/develop_node/src/proof.c:1229:28: error: use of undeclared identifier '_OWORD'
*( ( _OWORD *)v7 + 2) = *( _OWORD *)&v5->from; 
                           ^
4 errors generated.
make: *** [/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/develop_node/src/obj/proof.o] Error 1
